# c-style-clang-plugin

./: .gitignore  LICENSE  README.md
sample/: snake-case-func.c
src/: CMakeLists.txt  main.cpp
